--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
 <h1>
   {{title}}
 </h1>
+
+
+<app-my-popover [position]="10" [links]="['test0', 'test', 'test']"></app-my-popover>
+<app-my-popover [position]="15" [links]="['test0', 'test', 'test', 'test', 'test']"></app-my-popover>
+
+<!--<pop-over-->
+  <!--#popOver6-->
+  <!--[my]="'bottom left'"-->
+  <!--[at]="'top right'"-->
+  <!--[anchor-to]="true"-->
+  <!--[x-offset]="5"-->
+  <!--[y-offset]="5">-->
+  <!--<div class="my-pop-over">Now you got me triggered. Click again to hide me.</div>-->
+<!--</pop-over>-->
+<!--<div class="inline-trigger" (click)="popOver6.toggle($event)">-->
+  <!--click me to toggle a the pop over (visible: false)-->
+<!--</div>-->
+
